Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttx
  namespace: ttx
  labels:
    name: ttx
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - api.ttx.gg
        - ttx.gg
      secretName: ttx-tls
  rules:
    - host: api.ttx.gg
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ttx-api
                port:
                  number: 3030
    - host: ttx.gg
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ttx-web
                port:
                  number: 3031
